models are created and login , signup pages are on

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,7 @@ body {
     background-color: ghostwhite;
     font-family: sans-serif;
 }
+.var{
+    justify-content: center;
+    align-items: center;
+}
