--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,14 @@
     <title><%= title %></title>
 </head>
 <body>
-    <div class="grid grid-cols-6">
-        <div class="col-start-2 col-span-2 content-center">
-            <%- include('header.ejs') %>
+    <div class="var">
+        <div class="grid grid-cols-9 grid-rows-6">
+            <div class="col-start-4 col-span-3 row-start-2 text-lg">
+                <div><%- include('header.ejs') %></div>
             <p class="py-1">New here? <a class="text-purple-600" href="/signup">Sign-up</a></p>
             <p class="py-1">Already have an account? <a class="text-purple-600" href="/login">Sign-in</a></p>
         </div>
     </div>
+</div>
 </body>
 </html>
