--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="relative flex min-h-screen text-gray-800flex-col justify-center overflow-hidden bg-gray-50 py-6 sm:py-12">
+    <div class="relative flex min-h-screen text-gray-900 flex-col justify-center overflow-hidden py-6 sm:py-12">
         <div class="relative py-3 sm:w-auto mx-auto text-center">
-            <span class="text-2xl font-light ">Login to your account</span>
+            <span class="text-2xl font-light px-8 ">Login to your account</span>
             <div>
                 <% if (messages && messages.error && messages.error.length > 0) { %>
                     <% for(var i=0; i<messages.error.length; i++) { %>
@@ -19,18 +19,17 @@
                 <% } %>
             </div>
             <div class="mt-4 bg-white shadow-md rounded-lg text-left">
-                <div class="h-2 bg-green-400 rounded-t-md"></div>
                 <form action="/session" method="post" class="px-8 py-6">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                     <label for="email" class="block mt-3 font-semibold">Email</label>
                     <input id="email" name="email" type="email" placeholder="Email" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-blue-500 focus:ring-1 rounded-md" required>
                     <label for="password" class="block mt-3 font-semibold">Password</label>
                     <input id="password" name="password" type="password" placeholder="Password" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-blue-500 focus:ring-1 rounded-md" required>
-                    <button type="submit" class="mt-6 w-full bg-green-400 text-white py-2 px-6 rounded-md hover:bg-blue-600 ">Login</button>
+                    <button type="submit" class="mt-6 w-full bg-green-600 text-white py-2 px-6 rounded-md hover:bg-blue-800 ">Login</button>
                 </form>
             </div>
             <div class="mt-4">
-                <p>Don't have an account?</p><a href="/signup" class="text-sm hover:text-purple-500"> Sign up</a>
+                <p>Don't have an account?</p><a href="/signup" class="text-sm hover:text-blue-900"> Sign up</a>
             </div>
         </div>
     </div>
