added associations across tables and create elections

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="csrf-token" content="<%= csrfToken %>">
 </head>
 <body>
     <div class="relative flex min-h-screen text-gray-900 flex-col justify-center overflow-hidden py-6 sm:py-12">
