--- a/views/pswdReset.ejs
+++ b/views/pswdReset.ejs
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title><%= title %></title>
 </head>
 <body>
-    <div class="relative text-gray-800 flex-col justify-center  bg-gray-100 py-5 sm:py-12">
-        <div class="relative sm:w-32 mx-auto text-center">
+    <div class="relative justify-center sm:py-10">
+        <div class="relative mx-auto text-center">
             <span class="text-2xl font-dark ">Reset your account password</span>
             <div>
                 <% if (messages && messages.error && messages.error.length > 0) { %>
@@ -20,14 +20,13 @@
                 <% } %>
             </div>
             <div class="mt-4 bg-blue-200 shadow-md rounded-lg text-left">
-                <div class="h-2 bg-green-400 rounded-t-md"></div>
                 <form action="/pswdReset" method="post" class="px-8 py-6">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                     <label for="old-password" class="block mt-3 font-semibold">Old password</label>
-                    <input id="old-password" name="old_password" type="password" placeholder="Old password" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-indigo-500 focus:ring-1 rounded-md" required>
+                    <input id="old-password" name="old_password" type="password" placeholder="Old password" class="border w-full h-5 px-3 py-3 mt-2 rounded-md" required>
                     <label for="new-password" class="block mt-3 font-semibold">New password</label>
-                    <input id="new-password" name="new_password" type="password" placeholder="New password" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-indigo-500 focus:ring-1 rounded-md" required>
-                    <button type="submit" class="mt-6 bg-green-500 text-white w-full py-2 px-6 rounded-md hover:bg-green-600 ">Change password</button>
+                    <input id="new-password" name="new_password" type="password" placeholder="New password" class="border w-full h-5 px-3 py-3 mt-2 rounded-md" required>
+                    <button type="submit" class="mt-6 bg-green-500 text-white w-full rounded-md hover:bg-blue-600 ">Change password</button>
                 </form>
             </div>
         </div>
