--- a/views/election.ejs
+++ b/views/election.ejs
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <title><%= title %></title>
 </head>
-<body>
-    <div class="cent"><%- include('header.ejs') %></div>
+<body class="bg-sky-100">
+    <div class="justify-center text-center"><%- include('header.ejs') %></div>
+    <h3 class="justify-center text-center text-2xl px-3 py-2 left">Hello, <%= username %></h3>
+    <a href="/signout" class="justify-center text-center flex text-right underline text-green-400 hover:text-red-400 px-3"> Signout</a> <br>
     <div class="my-6 mx-10">
         <div>
             <% if (messages.success) { %>
@@ -24,23 +26,25 @@
             <% } %>
         </div>
         <div class="flex gap-2 py-4 justify-center">
-            <h5 class="text-2xl">Your Elections</h5>
+            <h5 class="text-2xl">Your elections</h5>
         </div>
-        <div class="flex-auto">
-            <div class="mx-4">  
-                <p class="text-orange-400 mx-auto text-center"><%= (election.length==0)?"You have not created any elections yet":"" %></p>
-                <ol class="list">
-                    <% for (let i=0; i<election.length; i++) { %>
-                        <li>
-                            <div class="flex items-center w-fit my-2 px-2 py-1 rounded">
-                                <a href="/election/<%= election[i].id %>" class="m-2 text-sm text-orange-400 "><%= election[i].elecName %></a>
+        <div class="flex flex-col text-center justify-center">
+            <div class="mx-4 flex flex-col justify-center text-center">  
+                <p class="text-orange-400 mx-auto text-center"><%= (elections.length==0)?"You have not created any electionss yet":"" %></p>
+                <ol class="flex flex-col justify-center mx-auto text-center">
+                    <% for (let i=0; i<elections.length; i++) { %>
+                        <li class="text-center justify-center">
+                            <div class="flex items-center w-fit my-2 px-2 py-1 rounded ">
+                                <a href="/election/<%= elections[i].id %>" class="text-black bg-stone-200 text-center rounded w-fit px-2 py-1 hover:bg-green-200 justify-center mx-auto text-center"><%= i+1 %>.<%= elections[i].elecName %></a>
                             </div>
                         </li>
                     <% } %>
                 </ol>
-                <div class="bg-orange-400 text-center rounded w-fit px-2 py-1 hover:bg-green-600 justify-center mx-auto text-center">
-                    <a href="/election/createNew" class="text-white">+ Create a new election</a>
+                <div class="py-5">
+                <div class="bg-green-400 text-center rounded  w-fit px-2 py-1 hover:bg-red-600 justify-center mx-auto text-center">
+                    <a href="/election/createNew" class="text-white">+ Create a new elections</a>
                 </div>
+            </div>
             </div>
             </div>
         </div>
