--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <title><%= title %></title>
 </head>
-<body>
+<body class="bg-sky-100">
     <div class="var">
         <div class="grid grid-cols-9 grid-rows-6">
             <div class="col-start-4 col-span-3 row-start-2 text-lg">
                 <div><%- include('header.ejs') %></div>
-            <p class="py-1">New here? <a class="text-purple-600" href="/signup">Sign-up</a></p>
-            <p class="py-1">Already have an account? <a class="text-purple-600" href="/login">Sign-in</a></p>
+            <p class="py-1">New here? <a class="text-blue-600" href="/signup">Sign-up</a></p>
+            <p class="py-1">Already have an account? <a class="text-blue-600" href="/login">Sign-in</a></p>
         </div>
     </div>
 </div>
