--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,1 @@
-<h1 class="text-3xl my-4 font-semibold text-gray-900">Welcome to Online Voting Platform</h1>
+<h1 class="text-3xl my-4 px-3 py-3 font-bold text-gray-900">Welcome to Online Voting Platform</h1>
