--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="./css/style.css" rel="stylesheet">
     <meta name="csrf-token" content="<%= csrfToken %>">
 </head>
-<body>
+<body class="bg-sky-100">
     <div class="relative flex min-h-screen text-gray-900 flex-col justify-center overflow-hidden py-6 sm:py-12">
         <div class="relative py-3 sm:w-auto mx-auto text-center">
             <span class="text-2xl font-light px-8 ">Login to your account</span>
