--- a/views/pswdReset.ejs
+++ b/views/pswdReset.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title><%= title %></title>
 </head>
-<body>
+<body class="bg-sky-100">
     <div class="relative justify-center sm:py-10">
         <div class="relative mx-auto text-center">
             <span class="text-2xl font-dark ">Reset your account password</span>
