--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta name="csrf-token" content="<%=csrfToken%>">
 </head>
-<body>
+<body class="bg-sky-100">
     <div class="relative flex min-h-screen text-gray-900 flex-col justify-center overflow-hidden py-6 sm:py-12">
         <div class="relative py-3 sm:w-auto mx-auto text-center">
             <span class="text-2xl font-light px-8 ">Create a new Account</span>
@@ -22,7 +22,6 @@
             <div class="mt-4 bg-white shadow-md rounded-lg text-left">
                 <form action="/admin" method="post" class="px-8 py-6">
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
-                    
                     <label for="firstName" class="block mt-3 font-semibold">First name</label>
                     <input id="firstName" name="firstName" type="text" placeholder="First name" class="border w-full h-5 px-3 py-5 mt-2 rounded-md" required>
                     <label for="lastName" class="block mt-3 font-semibold">Last name</label>
@@ -35,7 +34,7 @@
                 </form>
             </div>
             <div class="mt-4">
-                <p>have an account?</p><a href="/signin" class="text-sm hover:text-blue-900"> Sign up</a>
+                <p>have an account?</p><a href="/login" class="text-sm hover:text-blue-900"> Sign in</a>
             </div>
         </div>
     </div>
