--- a/views/ElectionOptions.ejs
+++ b/views/ElectionOptions.ejs
@@ -36,7 +36,7 @@
     </div>
     <div class="flex gap-1 mx-10 mt-6">
         <span>></span>
-        <a href="/election" class=" w-fit text-stone-800 hover:text-green-600">All Elections</a>
+        <a href="/elections" class=" w-fit text-stone-800 hover:text-green-600">All Elections</a>
         <span>></span>
     </div>
     <div class="my-6 mx-10 text-center justify-center">
