--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -25,52 +25,50 @@
     <title><%= title %></title>
 </head>
 <body class="bg-sky-100">
-    <%- include('header.ejs') %>
+    <div class="mx-auto flex text-center justify-center"><%- include('header.ejs') %></div>
     <div class="rounded-lg px-6 py-2">
         <% if (messages && messages.error && messages.error.length > 0) { %>
             <% for(var i=0; i<messages.error.length; i++) { %>
-                <p class="bg-purple-100 my-3 list-none rounded-md px-4 py-2"><%= messages.error[i] %></p>
+                <p class="bg-blue-100 my-3 list-none rounded-md px-4 py-2"><%= messages.error[i] %></p>
             <% } %>
         <% } %>
         </div>
-    <div class="flex gap-1 mx-10 mt-6 bg-gray-50">
+    <div class="flex gap-1 mx-10 mt-6">
         <span>></span>
-        <a href="/elections" class="text-purple-800 hover:text-purple-600">All Elections</a>
+        <a href="/election" class="text-black-800 hover:text-green-600">All Elections</a>
         <span>></span>
-        <a href="/elections/<%= id %>/" class="text-purple-800 hover:text-purple-600">Election</a>
+        <a href="/election/<%= id %>/" class="text-black-800 hover:text-green-600">Election</a>
     </div>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <div class="my-6 mx-10">
         <div class="flex gap-2 py-4 justify-center text-center">
             <h5 class="text-2xl"><%= title %> -Questions</h5>
-            <div class="bg-orange-800 rounded w-fit px-2 py-1 hover:bg-blue-600">
-                <a href="/election/<%= id %>/questions/create" class="text-white">+ Add a new question</a>
             </div>
         </div>
         <div class="flex-auto">
             <div class="mx-4">
-                <p class="text-black-600"><%= (Questions.length==0)?"You haven't added any questions yet!":"" %></p>
-                <ol class="list-decimal">
-                    <% for (let i=0; i<Questions.length; i++) { %>
+                <p class="text-black-600 mx-auto justify-center text-center"><%= (thisquestions.length==0)?"You haven't added any questions yet!":"" %></p>
+                <ol class="list-decimal flex text-center justify-center">
+                    <% for (let i=0; i<thisquestions.length; i++) { %>
                         <li>
                             <div class="flex justify-between items-center w-full my-2 px-2 py-1 rounded">
                                 <div>
-                                    <a href="/election/<%= id %>/Questions/<%= Questions[i].id %>" class="my-2 text-lg text-purple-600 "><%= Questions[i].elecQuestion %></a>
-                                    <p class="text-purple-800 text-md my-2"><%= Questions[i].elecDescription %></p>
+                                    <a href="/election/<%= id %>/questions/<%= thisquestions[i].id %>" class="my-2 text-lg text-blue-600 "><%= thisquestions[i].elecQuestion %></a>
+                                    <p class="text-blue-800 text-md my-2"><%= thisquestions[i].elecDescription %></p>
                                 </div>
-                                <div class="flex gap-2 text-purple-800">
-                                    <div class="rounded w-fit px-2 py-1 flex gap-2 cursor-pointer hover:text-purple-600">
+                                <div class="flex gap-2 text-blue-800">
+                                    <div class="rounded w-fit px-2 py-1 flex gap-2 cursor-pointer hover:text-blue-600">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mt-1">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
                                           </svg>                                                                          
-                                        <a href="/election/<%= id %>/Questions/<%= Questions[i].id %>/edit" class="text-sm">Edit question</a>
+                                        <a href="/election/<%= id %>/thisquestions/<%= thisquestions[i].id %>/edit" class="text-sm">Edit question</a>
                                     </div>
-                                    <% if ((questions.length) > 1) { %>
-                                    <div class="rounded w-fit px-2 py-1 flex gap-2 cursor-pointer hover:text-purple-600">
+                                    <% if ((thisquestions.length) > 1) { %>
+                                    <div class="rounded w-fit px-2 py-1 flex gap-2 cursor-pointer hover:text-blue-600">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mt-1">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                                           </svg>                                      
-                                        <a onclick="deleteQuestion({electionID: <%= id %>, questionID: <%= Questions[i].id %>})" class="text-sm">Delete question</a>
+                                        <a onclick="deleteQuestion({electionID: <%= id %>, questionID: <%= thisquestions[i].id %>})" class="text-sm">Delete question</a>
                                     </div>
                                     <% } %>
                                 </div>
@@ -79,6 +77,9 @@
                     <% } %>
                 </ol>
             </div>
+        </div>
+        <div class=" mx-auto flex bg-orange-400 rounded w-fit px-2 py-1 hover:bg-blue-600 text-center justify-center">
+            <a href="/election/<%= id %>/questions/create" class="text-white">+ Add a new question</a>
         </div>
     </div>
 </body>
