--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div class="var">
         <div class="grid grid-cols-9 grid-rows-6">
             <div class="col-start-4 col-span-3 row-start-2 text-lg">
-                <div><%- include('header.ejs') %></div>
+                <div><h1 class="flex text-center justify-center text-3xl my-4 px-3 py-3 font-semibold text-gray-900">Online Voting Platform</h1></div>
             <p class="py-1">New here? <a class="text-blue-600" href="/signup">Sign-up</a></p>
             <p class="py-1">Already have an account? <a class="text-blue-600" href="/login">Sign-in</a></p>
         </div>
