--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,1 @@
-<h1 class="text-3xl my-4 px-3 py-3 font-semibold text-gray-900">Online Voting Platform</h1>
+<div class=""><h1 class="text-3xl my-4 px-3 py-3 font-semibold text-gray-900">Online Voting Platform</h1><a href="/signout" class=" flex text-right underline text-orange-400 hover:text-green-400 px-3"> Signout</a></div>
