thsnk you page updated

--- a/views/NewQuestion.ejs
+++ b/views/NewQuestion.ejs
@@ -12,11 +12,11 @@
     <div class="flex mx-auto text-center justify-center"><%- include('header.ejs') %></div>
     <div class="flex gap-1 mx-10 mt-6 ">
         <span>></span>
-        <a href="/elections" class="text-black-800 hover:text-green-600">All Elections</a>
+        <a href="/election" class="text-black-800 hover:text-green-600">All Elections</a>
         <span>></span>
-        <a href="/elections/<%=id%>/" class="text-black-800 hover:text-green-600">Election</a>
+        <a href="/election/<%=id%>/" class="text-black-800 hover:text-green-600">Election</a>
         <span>></span>
-        <a href="/elections/<%=id%>/NewQuestion" class="text-black-800 hover:text-green-600">Questions</a>
+        <a href="/election/<%=id%>/NewQuestion" class="text-black-800 hover:text-green-600">Questions</a>
     </div>
     <div class=" flex text-gray-800 antialiased flex-col overflow-y-hidden">
         <div class=" py-3 sm:w-96 mx-auto text-center">
