--- a/views/ElectionOptions.ejs
+++ b/views/ElectionOptions.ejs
@@ -11,7 +11,7 @@
         var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");
         function endElection() {
             let electionID = <%= id %>;
-            fetch(`/elections/${electionID}/end`, {
+            fetch(`/election/${electionID}/end`, {
                 method: "put",
                 headers: {"Content-Type":"application/json"},
                 body: JSON.stringify({
@@ -19,7 +19,7 @@
                 })
             }).then((res)=>{
                 if (res.ok) {
-                    window.location.replace(`/elections/${electionID}`);
+                    window.location.replace(`/election/${electionID}`);
                 }
             }).catch((err)=> console.error(err))
         }
@@ -36,17 +36,15 @@
     </div>
     <div class="flex gap-1 mx-10 mt-6">
         <span>></span>
-        <a href="/elections" class=" w-fit text-stone-800 hover:text-green-600">All Elections</a>
+        <a href="/election" class=" w-fit text-stone-800 hover:text-green-600">All Elections</a>
         <span>></span>
     </div>
     <div class="my-6 mx-10 text-center justify-center">
         <h3 class="text-4xl my-4 font-medium"><%= title %></h3>
         <% if (Running) { %>
-            <div class=" flex py-4 text-center justify-center">
-                <h4 class="text-2xl my-2 font-medium">Your election is launched!</h4>
-                <h2 class="my-2 text-lg text-black flex gap-1">Voters can vote from this url:</h2>
-                <a href="/e/<%= urlString %>/" class="py-1 hover:text-purple-800 text-purple-600"><%= urlString %></a>
-            </div>
+                <h4 class="text-2xl my-2 font-medium w-full text-center justify-center mx-auto">Your election is launched!</h4>
+                <h2 class="my-2 text-lg text-black flex gap-1text-center justify-center mx-auto ">Voters can vote from this url:</h2>
+                <a href="/e/<%= cstmUrl %>/" class="py-1 hover:text-green-600 text-blue-600">this is the link:<%= cstmUrl %></a>
         <% } %>
         <div class=" flex mt-4 text-center justify-center">
             <h2 class="my-2 text-lg text-black flex gap-1 text-center justify-center">Your election has <span class="text-purple-600"> <%= noQuestions %> </span> questions in the ballot</h2>
@@ -57,7 +55,7 @@
         <div class=" flex mt-4 text-center justify-center">
             <h2 class="my-2 text-lg text-black flex gap-1 text-center justify-center">Your election has <span class="text-purple-600"> <%= noVoters %> </span> registered voters.</h2>
         </div>
-        <a href="/elections/<%= id %>/voters" class="flex justify-center text-cente hover:text-purple-800 text-purple-600 py-5">Manage voters</a>
+        <a href="/election/<%= id %>/voters" class="flex justify-center text-cente hover:text-purple-800 text-purple-600 py-5">Manage voters</a>
         <% if (!Running) { %>
             <div class=" flex justify-center mx-auto text-center bg-orange-400 rounded w-fit px-4 py-1 hover:bg-blue-600">
                 <a href="/election/<%= id %>/preview" class="text-white flex text-center justify-center">Preview & Launch election</a>
