--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,17 @@
-<div class=""><h1 class="text-3xl my-4 px-3 py-3 font-semibold text-gray-900">Online Voting Platform</h1><a href="/signout" class=" flex text-right underline text-orange-400 hover:text-green-400 px-3"> Signout</a></div>
+<header class="text-gray-600 body-font">
+        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+          <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
+            <!-- <a class="mr-5 hover:text-gray-900">First Link</a>
+            <a class="mr-5 hover:text-gray-900">Second Link</a>
+            <a class="mr-5 hover:text-gray-900">Third Link</a>
+            <a class="hover:text-gray-900">Fourth Link</a> -->
+          </nav>
+          <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-gray-900 lg:items-center lg:justify-center mb-4 md:mb-0">
+            <span class="ml-3 text-3xl text-black-800 text-bold">Online Voting Platform</span>
+          </a>
+          <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
+                <a href="/signout" class="inline-flex text-white items-center bg-orange-400 border-0 py-1 px-3 focus:outline-none hover:bg-blue-600 rounded text-base mt-4 md:mt-0">Signout</a>
+            </button>
+          </div>
+        </div>
+      </header>
