--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,8 @@
     <meta name="csrf-token" content="<%= csrfToken %>">
 </head>
 <body class="bg-sky-100">
-    <div class="relative flex min-h-screen text-gray-900 flex-col justify-center overflow-hidden py-6 sm:py-12">
+    <h1 class="mx-auto justify-center text-center text-black-800 text-3xl py-3">Online Voting platform</h1>
+    <div class="relative flex min-h-screen text-gray-900 flex-col justify-center overflow-hidden py-3 sm:py-12">
         <div class="relative py-3 sm:w-auto mx-auto text-center">
             <span class="text-2xl font-light px-8 ">Login to your account</span>
             <div>
