--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -53,7 +53,7 @@
                         <li>
                             <div class="flex items-center w-full my-2 px-2 py-1 rounded">
                                 <div>
-                                    <a href="/election/<%= electionID %>/questions/<%= thisquestions[i].id %>" class="my-2 text-lg text-blue-600 "><%= thisquestions[i].elecQuestion %></a>
+                                  <br>  <a href="/election/<%= electionID %>/questions/<%= thisquestions[i].id %>" class="my-2 text-lg text-blue-600 "><%= thisquestions[i].elecQuestion %></a>
                                     <p class="text-blue-800 text-md my-2"><%= thisquestions[i].elecDescription %></p>
                                 </div>
                                 <div class="flex gap-2 text-blue-800">
