--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -18,7 +18,7 @@
                 <% } %>
             </div>
             <div class="flex flex-col gap-6">
-                <span class="text-2xl font-medium">Thankyou for voting!</span>
+                <span class="text-2xl font-medium">Thankyou </span>
                 <span class="text-2xl font-medium">Election has ended</span>
                 <span class="text-2xl font-medium">Come back to same page for results</span>
             </div>
