fixed the link and made some changes to the UI

--- a/views/NewElection.ejs
+++ b/views/NewElection.ejs
@@ -31,7 +31,7 @@
                 <input id="elecName" name="elecName" type="text" placeholder="Election name" class=" border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-blue-500 focus:ring-1 rounded-md" required>
                 <label for="cstmUrl" class="block mt-3 font-semibold">Enter a custom URL (With no spaces)</label>
                 <input id="cstmUrl" name="cstmUrl" type="text" placeholder="Election URL String" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-blue-500 focus:ring-1 rounded-md" required>
-                <button type="submit" class="mt-6 w-full bg-green-600 text-white py-2 px-6 rounded-md hover:bg-blue-800 ">Create</button>
+                <button type="submit" class="mt-6 w-full bg-green-600 text-white py-2 px-6 rounded-md">Create</button>
             </form>
         </div>
     </div>
