--- a/views/NewQuestion.ejs
+++ b/views/NewQuestion.ejs
@@ -35,7 +35,7 @@
                     <input id="question" name="question" type="text" placeholder="Question" class="border w-full h-5 px-3 py-5 mt-2 bg-sky-100 focus:ring-orange-200  rounded-md" required>
                     <label for="description" class="block mt-3 font-semibold">Description</label>
                     <textarea id="description" name="description" class="border bg-sky-100 w-full px-2 py-1 mt-2 focus:ring-orange-200 rounded-md" placeholder="Description" rows="4" cols="15"></textarea>
-                    <button type="submit" class="mt-6 w-full bg-orange-500 text-white py-2 px-6 rounded-md hover:bg-blue-600 ">Add question</button>
+                    <button type="submit" class="mt-6 w-full bg-blue-400 text-white py-2 px-6 rounded-md ">Add question</button>
                 </form>
             </div>
         </div>
