--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -31,7 +31,7 @@
             <div class="flex justify-between">
                 <span class="text-4xl font-light "><%= title %></span>
                 <div class="flex">
-                    <div class="bg-purple-100 border border-purple-700 text-orange-400 rounded w-fit px-4 pt-2 hover:text-white hover:bg-blue-600 mx-2">
+                    <div class="bg-blue-100 border border-blue-700 text-white-400 rounded w-fit px-4 pt-2 mx-2">
                         <a href="/election/<%= electionID %>/">Edit election</a>
                     </div>
                 </div>
