--- a/views/ElectionOptions.ejs
+++ b/views/ElectionOptions.ejs
@@ -44,7 +44,7 @@
         <% if (Running) { %>
                 <h4 class="text-2xl my-2 font-medium w-full text-center justify-center mx-auto">Your election is launched!</h4>
                 <h2 class="my-2 text-lg text-black flex gap-1text-center justify-center mx-auto ">Voters can vote from this url:</h2>
-                <a href="/e/<%= cstmUrl %>/" class="py-1 hover:text-green-600 text-blue-600">this is the link:<%= cstmUrl %></a>
+                <a href="/e/<%= cstmUrl %>/" class="py-1 hover:text-green-600 text-blue-600">https://online-voting-platform-rvwf.onrender.com/e/<%= cstmUrl %></a>
         <% } %>
         <div class=" flex mt-4 text-center justify-center">
             <h2 class="my-2 text-lg text-black flex gap-1 text-center justify-center">Your election has <span class="text-purple-600"> <%= noQuestions %> </span> questions in the ballot</h2>
@@ -57,13 +57,13 @@
         </div>
         <a href="/election/<%= id %>/voters" class="flex justify-center text-cente hover:text-purple-800 text-purple-600 py-5">Manage voters</a>
         <% if (!Running) { %>
-            <div class=" flex justify-center mx-auto text-center bg-orange-400 rounded w-fit px-4 py-1 hover:bg-blue-600">
+            <div class=" flex justify-center mx-auto text-center bg-blue-400 rounded w-fit px-4 py-1 ">
                 <a href="/election/<%= id %>/preview" class="text-white flex text-center justify-center">Preview & Launch election</a>
             </div>
         <% } %>
         <% if (Running) { %>
             <div class="flex gap-2 text-center justify-center">
-                <div class="bg-orange-400 rounded w-fit px-4 py-1 hover:bg-green-500 text-center justify-center">
+                <div class="bg-blue-400 rounded w-fit px-4 py-1 text-center justify-center">
                     <a href="" class="text-white">Preview results</a>
                 </div>
                 <button onclick="endElection()" class=" text-center justify-center bg-purple-800 rounded w-fit px-4 py-1 hover:bg-purple-600">
