--- a/views/editoption.ejs
+++ b/views/editoption.ejs
@@ -53,7 +53,7 @@
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                     <label for="option" class="block mt-3 font-semibold">Option</label>
                     <input value="<%= option %>" id="option" name="option" type="text" placeholder="Option" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-indigo-500 focus:ring-1 rounded-md" required>
-                    <button class="mt-6 w-full bg-orange-500 text-white py-2 px-6 rounded-md hover:bg-green-400 " onclick="updateOption()">Update option</button>
+                    <button class="mt-6 w-full bg-blue-500 text-white py-2 px-6 rounded-md" onclick="updateOption()">Update option</button>
                 </div>
             </div>
         </div>
