--- a/views/election.ejs
+++ b/views/election.ejs
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-sky-100">
     <div class="justify-center text-center"><%- include('header.ejs') %></div>
-    <h3 class="text-2xl px-3 py-2 left flex text-center justify-center">Hello, <%= username %></h3>
+    <h3 class="text-2xl px-3 py-2 left flex text-center justify-center">Welcome <%= username %></h3>
     <br>
     <div class="my-6 mx-10">
         <div>
@@ -30,7 +30,7 @@
         </div>
         <div class="flex flex-col text-center justify-center">
             <div class="mx-4 flex flex-col justify-center text-center">  
-                <p class="text-orange-400 mx-auto text-center"><%= (elections.length==0)?"You have not created any electionss yet":"" %></p>
+                <p class="text-blue-400 mx-auto text-center"><%= (elections.length==0)?"No elections are created yet!":"" %></p>
                 <ol class="flex flex-col justify-center mx-auto text-center">
                     <% for (let i=0; i<elections.length; i++) { %>
                         <li class="text-center justify-center">
@@ -41,7 +41,7 @@
                     <% } %>
                 </ol>
                 <div class="py-5">
-                <div class="bg-orange-400 text-center rounded  w-fit px-2 py-1 hover:bg-blue-600 justify-center mx-auto text-center">
+                <div class="bg-blue-400 text-center rounded  w-fit px-2 py-1 justify-center mx-auto text-center">
                     <a href="/election/createNew" class="text-white">Create a new elections</a>
                 </div>
             </div>
