--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,7 +10,7 @@
             <span class="ml-3 text-3xl text-black-800 text-bold">Online Voting Platform</span>
           </a>
           <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
-                <a href="/signout" class="inline-flex text-white items-center bg-orange-400 border-0 py-1 px-3 focus:outline-none hover:bg-blue-600 rounded text-base mt-4 md:mt-0">Signout</a>
+                <a href="/signout" class="inline-flex text-white items-center bg-blue-400 border-0 py-1 px-3 focus:outline-none rounded text-base mt-4 md:mt-0">Sign out</a>
             </button>
           </div>
         </div>
