--- a/views/questionPage.ejs
+++ b/views/questionPage.ejs
@@ -31,11 +31,11 @@
     <div class="text-center justify-center"><%- include('header.ejs') %></div>
     <div class="flex gap-1 mx-10 mt-6">
         <span>></span>
-        <a href="/election" class="text-black-800 hover:text-purple-600">All Elections</a>
+        <a href="/election" class="text-black-800 hover:text-green-600">All Elections</a>
         <span>></span>
-        <a href="/election/<%= id %>/" class="text-black-800 hover:text-purple-600">Election</a>
+        <a href="/election/<%= id %>/" class="text-black-800 hover:text-green-600">Election</a>
         <span>></span>
-        <a href="/election/<%= id %>/questions" class="text-black-800 hover:text-purple-600">Questions</a>
+        <a href="/election/<%= id %>/questions" class="text-black-800 hover:text-green-600">Questions</a>
     </div>
     <div class="grid grid-cols-6">
         <div class="col-start-2 col-span-4">
@@ -82,11 +82,11 @@
                         <input type="text" name="option" placeholder="Enter an option" class="border border-gray-300 text-gray-900 w-full rounded p-2 text-sm" required autofocus/>
                     </div>
                     <div class="flex-none">
-                        <button type="submit" class="bg-orange-400 text-white px-5 py-1.5 rounded mr-2 mb-2 hover: bg-green-400">Add answer option</button>
+                        <button type="submit" class="bg-blue-400 text-white px-5 py-1.5 rounded mr-2 mb-2">Add answer option</button>
                     </div>
                 </div>
             </form>
-            <p class="text-purple-800"><%= (thisoptions.length==0)?"You haven't added any options yet!":"" %></p>
+            <p class="text-purple-800"><%= (thisoptions.length==0)?"No options has been added!":"" %></p>
         </div>
     </div>
 </body>
