--- a/views/votepreview.ejs
+++ b/views/votepreview.ejs
@@ -31,7 +31,7 @@
             <div class="flex justify-between">
                 <span class="text-4xl font-light "><%= title %></span>
                 <div class="flex">
-                    <div class="bg-purple-100 border border-purple-700 text-orange-400 rounded w-fit px-4 pt-2 hover:text-white hover:bg-blue-600 mx-2">
+                    <div class="bg-blue-100 border border-blue-700 text-white-400 rounded w-fit px-4 pt-2mx-2">
                         <a href="/election/<%= electionID %>/">Edit election</a>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="justify-center text-center mx-auto flex py-3">
-            <button onclick="launchElection()" class=" py-3 text-center justify-center mx-auto flex text-white bg-orange-400 rounded w-fit px-4 hover:bg-blue-600 ml-2 ">
+            <button onclick="launchElection()" class=" py-3 text-center justify-center mx-auto flex text-white bg-blue-400 rounded w-fit px-4 ml-2 ">
                 Launch election
             </button>
         </div>
