--- a/views/voterlogin.ejs
+++ b/views/voterlogin.ejs
@@ -29,7 +29,7 @@
                             <input required type="text" id="voterUnqid" name="voterUnqid" class="bg-sky-100 inline-block rounded-lg shadow-md py-3 px-4 mb-5 text-base leading-6 placeolder-gray-500" placeholder="Enter Unique VoterId/UserName" required><br/>
                             <label for="voterUnqPswd" class="text-md w-full inline-block font-medium leading-3 text-gray-700 ">Enter Password</label>
                             <input required type="password" id="voterUnqPswd" name="voterUnqPswd" class="bg-sky-100 inline-block rounded-lg shadow-md py-3 px-4 mb-5 text-base leading-6 placeolder-gray-500" placeholder="Enter Voter's Password"><br/>
-                            <button type="submit" id="submit" class="text-center justify-center mx-auto flex w-fit rounded-lg shadow-lg px-3 py-1 bg-green-400 text-white hover:bg-blue-400">Submit</button>
+                            <button type="submit" id="submit" class="text-center justify-center mx-auto flex w-fit rounded-lg shadow-lg px-3 py-1 bg-blue-400 text-white">Submit</button>
                         </form>
                     </div>
             </div>
