--- a/views/voters.ejs
+++ b/views/voters.ejs
@@ -81,8 +81,8 @@
                     <% } %>
                 </ol>
                 <div class="flex gap-2 py-4 mx-auto justify-center text-center">
-                    <div class="bg-orange-400 rounded w-fit px-2 py-1 hover:bg-green-400">
-                        <a href="/election/<%= id %>/voters/create" class="text-white">+ Add a new voter</a>
+                    <div class="bg-blue-400 rounded w-fit px-2 py-1">
+                        <a href="/election/<%= id %>/voters/create" class="text-white"> Add a new voter</a>
                     </div>
                 </div>
             </div>
